--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VITE_API_KEY=your_api_key_here
+VITE_API_URL=http://localhost:3000
+VITE_API_KEY=your_default_api_key
 VITE_API_BASE_URL=https://api.siliconflow.cn
