--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  node_version = "20"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  VITE_API_URL = "your_api_url"
