--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^9.18.0",
     "eslint-plugin-oxlint": "^0.15.6",
     "eslint-plugin-vue": "^9.32.0",
+    "highlight.js": "^11.11.1",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
